# grid-sample3d-trt-plugin

./: CMakeLists.txt  README.md  build.sh
src/: grid_sample_3d_plugin.cpp  grid_sample_3d_plugin.h
test/: CMakeLists.txt
